Use sudo to run rabbitmqctl.

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ services:
   - rabbitmq
 
 before_script:
-  - rabbitmqctl add_vhost /test
-  - rabbitmqctl add_user npg npg
-  - rabbitmqctl set_permissions -p /test npg '.*' '.*' '.*'
+  - sudo rabbitmqctl add_vhost /test
+  - sudo rabbitmqctl add_user npg npg
+  - sudo rabbitmqctl set_permissions -p /test npg '.*' '.*' '.*'
