Add Module::Install explicitly because it is not picked up as a dependency of Module::Install::AuthorTests.

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ install:
   - cpanm --quiet --notest AnyEvent
   - cpanm --quiet --notest Net::AMQP
   - cpanm --quiet --notest Readonly
+  - cpanm --quiet --notest Module::Install
   - cpanm --quiet --notest Module::Install::AuthorTests
 
 before_script:
