--- a/.travis.yml
+++ b/.travis.yml
@@ -16,14 +16,13 @@ install:
   - cpanm --quiet --notest Net::AMQP
   - cpanm --quiet --notest Readonly
   - cpanm --quiet --notest Test::Class
+  - wget https://github.com/wtsi-npg/AnyEvent-RabbitMQ/archive/${ANYEVENT_VERSION}.tar.gz -O /tmp/AnyEvent-RabbitMQ-${ANYEVENT_VERSION}.tar.gz
+  - cd /tmp && tar xfz AnyEvent-RabbitMQ-${ANYEVENT_VERSION}.tar.gz
+  - cd AnyEvent-RabbitMQ-${ANYEVENT_VERSION}
+  - perl Makefile.PL && make install
+  - cd ${TRAVIS_BUILD_DIR}
 
 before_script:
   - sudo rabbitmqctl add_vhost /test
   - sudo rabbitmqctl add_user npg npg
   - sudo rabbitmqctl set_permissions -p /test npg '.*' '.*' '.*'
-
-  - wget https://github.com/wtsi-npg/AnyEvent-RabbitMQ/archive/${ANYEVENT_VERSION}.tar.gz -O /tmp/AnyEvent-RabbitMQ-${ANYEVENT_VERSION}.tar.gz
-  - cd /tmp && tar xfz AnyEvent-RabbitMQ-${ANYEVENT_VERSION}.tar.gz
-  - cd AnyEvent-RabbitMQ-${ANYEVENT_VERSION}
-  - perl Makefile.PL ; make install
-  - cd ${TRAVIS_BUILD_DIR}
