--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,3 @@
-env:
-  - ANYEVENT_VERSION=1.17-25-g6a194a1
 
 language: perl
 
@@ -9,21 +7,30 @@ perl:
 services:
   - rabbitmq
 
+env:
+  - ANYEVENT_VERSION="1.18"
+  - DNAP_UTILITIES_VERSION="0.4.1"
+
 install:
   - cpanm --quiet --notest AnyEvent
   - cpanm --quiet --notest Data::Dump
   - cpanm --quiet --notest Log::Log4perl
-  - cpanm --quiet --notest Module::Install::AuthorTests
   - cpanm --quiet --notest Net::AMQP
   - cpanm --quiet --notest Readonly
   - cpanm --quiet --notest Test::Class
-  - wget https://github.com/wtsi-npg/AnyEvent-RabbitMQ/archive/${ANYEVENT_VERSION}.tar.gz -O /tmp/AnyEvent-RabbitMQ-${ANYEVENT_VERSION}.tar.gz
-  - cd /tmp && tar xfz AnyEvent-RabbitMQ-${ANYEVENT_VERSION}.tar.gz
-  - cd AnyEvent-RabbitMQ-${ANYEVENT_VERSION}
-  - perl Makefile.PL && make install
-  - cd ${TRAVIS_BUILD_DIR}
+  - cpanm --quiet --notest Test::Exception
+  - cpanm --quiet --notest Test::Perl::Critic
+  - cpanm --quiet --notest AnyEvent::RabbitMQ
+  - cpanm --quiet --notest https://github.com/wtsi-npg/perl-dnap-utilities/releases/download/${DNAP_UTILITIES_VERSION}/WTSI-DNAP-Utilities-${DNAP_UTILITIES_VERSION}.tar.gz
 
 before_script:
   - sudo rabbitmqctl add_vhost /test
   - sudo rabbitmqctl add_user npg npg
   - sudo rabbitmqctl set_permissions -p /test npg '.*' '.*' '.*'
+
+script:
+  perl Build.PL && ./Build test
+
+after_success:
+  - ./Build dist
+  - export DIST_FILE=$(ls WTSI-NPG-RabbitMQ-*.tar.gz)
